; ModuleID = '/home/carl/AnghaBench/postgres/src/timezone/extr_zic.c_hardlinkerr.c'
source_filename = "/home/carl/AnghaBench/postgres/src/timezone/extr_zic.c_hardlinkerr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AT_FDCWD = common dso_local global i32 0, align 4
@AT_SYMLINK_FOLLOW = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @hardlinkerr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hardlinkerr(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* @AT_FDCWD, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = load i32, i32* @AT_FDCWD, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = load i32, i32* @AT_SYMLINK_FOLLOW, align 4
  %11 = call i32 @linkat(i32 %6, i8* %7, i32 %8, i8* %9, i32 %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = icmp eq i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  br label %17

15:                                               ; preds = %2
  %16 = load i32, i32* @errno, align 4
  br label %17

17:                                               ; preds = %15, %14
  %18 = phi i32 [ 0, %14 ], [ %16, %15 ]
  ret i32 %18
}

declare dso_local i32 @linkat(i32, i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
